--- a/dk2nu/CMakeLists.txt
+++ b/dk2nu/CMakeLists.txt
@@ -128,7 +128,7 @@ if( ${ROOT_MAJOR_VERSION} LESS 6 )
 else()
   set(ROOT_INCLUDE_PATH $ENV{ROOT_INCLUDE_PATH}:${PROJECT_SOURCE_DIR}:${PROJECT_SOURCE_DIR}/tree)
   set(TREEDICTFILES ${CMAKE_BINARY_DIR}/libdk2nuTree_rdict.pcm ${CMAKE_BINARY_DIR}/libdk2nuTree.rootmap)
-  set(ROOT_DICT_OPT_TREE -I.. -I../tree  -I../include -I../include/dk2nu -I../include/tree -I../include/dk2nu/tree -p -s libdk2nuTree.so -rml libdk2nuTree.so -rmf libdk2nuTree.rootmap)
+  set(ROOT_DICT_OPT_TREE -I.. -I../tree  -I../include -I../include/dk2nu -Idk2nu -I../include/tree -I../include/dk2nu/tree -Idk2nu/tree -p -s libdk2nuTree.so -rml libdk2nuTree.so -rmf libdk2nuTree.rootmap)
 endif()
 ROOT_GENERATE_DICTIONARY("${dk2nuTree_DICTIONARY}" "${dk2nuTree_HDRS}" LINKDEF "${dk2nuTree_LINKDEF}" OPTIONS ${ROOT_DICT_OPT_TREE} )
 
@@ -170,7 +170,7 @@ if( ${ROOT_MAJOR_VERSION} LESS 6 )
 else()
   set(ROOT_INCLUDE_PATH $ENV{ROOT_INCLUDE_PATH}:${PROJECT_SOURCE_DIR}:${PROJECT_SOURCE_DIR}/genie)
   set(GENIEDICTFILES ${CMAKE_BINARY_DIR}/libdk2nuGenie_rdict.pcm ${CMAKE_BINARY_DIR}/libdk2nuGenie.rootmap)
-  set(ROOT_DICT_OPT_GENIE -I.. -I../genie -I../include -I../include/dk2nu -I../include/genie -I../include/dk2nu/genie -p -s libdk2nuGenie.so -rml libdk2nuGenie.so -rmf libdk2nuGenie.rootmap)
+  set(ROOT_DICT_OPT_GENIE -I.. -I../genie -I../include -I../include/dk2nu -Idk2nu -I../include/genie -I../include/dk2nu/genie -Idk2nu/genie -p -s libdk2nuGenie.so -rml libdk2nuGenie.so -rmf libdk2nuGenie.rootmap)
 endif()
 ROOT_GENERATE_DICTIONARY("${dk2nuGenie_DICTIONARY}" "${dk2nuGenie_HDRS}" LINKDEF "${dk2nuGenie_LINKDEF}" OPTIONS ${ROOT_DICT_OPT_GENIE} )
 
